# generative-ui

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile.api  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: ac192ead293f_create_users_table.py  c2b956249a35_users_table.py
backend/app/api/: __init__.py
backend/app/dependencies/: auth.py  database.py  services.py
backend/app/errors/: __init__.py  global_handler.py  object_not_found_error.py
backend/app/models/: __init__.py  history_meta.py  user_model.py
backend/app/repositories/: base_repository.py  user_repository.py
backend/app/routers/: auth_router.py  generative_router.py  user_router.py
backend/app/services/core/: generative.py  user_service.py
backend/app/types/: base.py  generative.py  user.py
backend/app/types/enum/: user_enum.py
backend/app/utils/: string.py
backend/notebooks/: business_descriptions.py  business_plan.py  prompts.py
backend/scripts/: entrypoint.api.sh
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/generative/: generative.tsx
frontend/src/routes/: NotFound.tsx  router.tsx
llm/: Dockerfile
