[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Laureano Arcanio",email = "larcanio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "alembic>=1.13.1",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.2.0",
    "pgvector (>=0.4.1,<0.5.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
