[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Laureano Arcanio",email = "larcanio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "alembic>=1.13.1",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.2.0",
    "pgvector (>=0.4.1,<0.5.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "types-passlib (>=1.7.7.20250408,<2.0.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "langchain[openai] (>=0.3.25,<0.4.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
    python = "^3.9"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
